# clawxiaoji-custom-src_new

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CUSTOMIZATION.md  Dockerfile  LICENSE  README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.vi.md  README.zh-TW.md  SECURITY.md  build.ps1  build.sh  deploy.sh  dev.ps1  docker-compose.yml  index.html  openclaw-version-policy.json  package-lock.json  package.json  vite.config.js
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.windsurf/workflows/: release.md
docs/: armbian-deploy.md  dingtalk-integration.md  docker-deploy.md  github-review-2026-03-30.md  index.html  linux-deploy.md
docs/update/: latest.json
scripts/: build.sh  dev-api.js  dev.sh  docker-deploy.sh  gen-extra-langs.cjs  gen-ja-ko.cjs  gen-locales.cjs  gen-patches-6lang.cjs  linux-deploy.sh  serve.js  split-locales.cjs
src/: main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs  utils.rs
src-tauri/src/commands/: agent.rs  assistant.rs  config.rs  device.rs  extensions.rs  logs.rs  memory.rs  messaging.rs  mod.rs  pairing.rs  service.rs  skills.rs  update.rs
src/components/: engagement.js  modal.js  sidebar.js  toast.js
tests/: docker-tasking.test.js  gateway-guardian-policy.test.js  model-presets.test.js
(+278 files in other folders)
